kube/app-expressappdemo-app.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: expressappdemo
spec:
  selector:
    app: app
  ports:
  - port: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: expressappdemo
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: 027655997808.dkr.ecr.us-east-2.amazonaws.com/expressappdemo-app:0.1
        ports:
        - containerPort: 3000
