kube/ingress-expressappdemo.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-expressappdemo
  namespace: expressappdemo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:

    - hosts:
      - app.expressappdemo.opencanvas.services
      secretName: cert-app-expressappdemo-opencanvas-services

  rules:

  - host: app.expressappdemo.opencanvas.services
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 3000
        path: /
